# Strollon

./: LICENSE  README.TXT  README.md  ReleaseNote.txt  Strollon.py  X11やWSLにおける追加の依存関係.txt  browser.py  dialogs.py  managers.py  pdf_viewer.py  pyproject.toml  theme.py  追加の依存関係.txt
Strollon.AppDir/: AppRun  Strollon.desktop
inno/: setup.iss
resources/pdfjs/: STROLLON_README.md
resources/pdfjs/web/: viewer.mjs  viewer.mjs.map
scripts/: build-linux-x64-appimage.sh  build.bat  clean.bat  devkit-linux.sh  devkit-linux_depricated.sh  devkit-win.bat  devkit-win_depricated.bat
